eqs: Update deprecated screen power items
* screen.on -> screen.on.display0
* screen.full -> screen.full.display0

AOSP frameworks/base: 8ac63071a4e6da7e0740f5eb6c6753218efcfd3a

Change-Id: Iad50e6cb63368e2d71e6fa1dbb6997c0f95d321e
Signed-off-by: Nishant Kumar <www.rajsonu13@gmail.com>

--- a/resource-overlay/eqs/Frameworks/res/xml/power_profile.xml
+++ b/resource-overlay/eqs/Frameworks/res/xml/power_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="screen.on">107.3</item>
-    <item name="screen.full">67.68</item>
+    <item name="screen.on.display0">107.3</item>
+    <item name="screen.full.display0">67.68</item>
     <item name="wifi.on">2.05</item>
     <item name="wifi.active">82.23</item>
     <item name="wifi.scan">18.95</item>
