eqs: Overlay: Enable automated dc dimming

--- a/resource-overlay/eqs/Frameworks/res/values/config.xml
+++ b/resource-overlay/eqs/Frameworks/res/values/config.xml
@@ -292,4 +292,9 @@
 
     <!-- Whether or not wcg mode should be enabled on this device -->
     <bool name="config_enableWcgMode">true</bool>
+
+    <!-- Defines the sysfs attribute path used by the device
+         to enable/disable DC dimming. -->
+    <string name="config_deviceDcDimmingSysfsNode">/sys/devices/platform/soc/soc:qcom,dsi-display-primary/dsi_display_dc</string>
+
 </resources>
