--- a/resource-overlay/eqs/Frameworks/res/values/config.xml
+++ b/resource-overlay/eqs/Frameworks/res/values/config.xml
@@ -330,4 +330,8 @@
          available on some devices. -->
     <bool name="config_enableHapticTextHandle">true</bool>
 
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
+
 </resources>
